--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -110,14 +110,14 @@
                     </div>    
                 </div><!--/.col-md-3-->
 				
-				<div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Company Address</h3>
                         <ul>
-                            <li><strong>UK Office</strong></li>
-                            <li>123 Kinsington Road</li>
-                            <li>West London</li>
-                            <li>132465</li>
+                            <li><strong>Mediaff Ltd - UK Office</strong></li>
+                            <li>Kemp House</li>
+                            <li>160 City Road</li>
+                            <li>EC1V 2NX</li>
                             <li>London, United Kingdom</li>
                         </ul>
                     </div>    
