--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -99,13 +99,11 @@
                     <div class="widget">
                         <h3>Company</h3>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="{{ path('index') }}">Home</a></li>
+                            <li><a href="{{ path('about') }}">About Us</a></li>
+                            <li><a href="{{ path('services') }}">Services</a></li>
+                            <li><a href="{{ path('portfolio') }}">Portfolio</a></li>
+                            <li><a href="{{ path('contact') }}">Contact us</a></li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
